@@ -17,9 +17,10 @@
 - Added "View error message" option on found errors
 - Added link to "GNU GPL" licence website (in credits form)
 
-- Added 2 new services:
+- Added 3 new services:
     - Boingboing TV
     - GameTrailers
+    - Tudou
 
 - Revised 6 services:
     - YouTube (added support for embeded videos and added "need login" detection)
